# long-short_focal_calibration

./: README.md  cam_front_30_undistorted.txt  cam_side_right_undistorted.txt  stereoParams.yaml
data/2024-04-22-17-02-02/cam_front_30/: 000000.txt
data/2024-04-22-17-02-02/cam_side_right/: 000000.txt
data/2024-04-22-17-02-17/cam_front_30/: 000000.txt
data/2024-04-22-17-02-17/cam_side_right/: 000000.txt
data/2024-04-22-17-02-31/cam_front_30/: 000000.txt
data/2024-04-22-17-02-31/cam_side_right/: 000000.txt
data/2024-04-22-17-02-43/cam_front_30/: 000000.txt
data/2024-04-22-17-02-43/cam_side_right/: 000000.txt
data/2024-04-22-17-04-59/cam_front_30/: 000001.txt
data/2024-04-22-17-04-59/cam_side_right/: 000000.txt
data/2024-04-22-17-05-18/cam_front_30/: 000000.txt
data/2024-04-22-17-05-18/cam_side_right/: 000000.txt
data/2024-04-22-17-05-48/cam_front_30/: 000000.txt
data/2024-04-22-17-05-48/cam_side_right/: 000000.txt
data/2024-04-22-17-06-01/cam_front_30/: 000000.txt
data/2024-04-22-17-06-01/cam_side_right/: 000000.txt
data/2024-04-22-17-06-19/cam_front_30/: 000000.txt
data/2024-04-22-17-06-19/cam_side_right/: 000000.txt
data/2024-04-22-17-09-14/cam_front_30/: 000000.txt
data/2024-04-22-17-09-14/cam_side_right/: 000000.txt
src/: CMakeLists.txt  calib.cpp  calib_ext.cpp  lidar_rectify.py  markConers.cpp  markLidarConer.py  rectify.cpp  solvePnP.cpp  stereoRectify.m  undistort.cpp
